--- a/package.json
+++ b/package.json
@@ -9,10 +9,48 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "@clerk/clerk-expo": "^0.19.16",
+    "@react-native-community/slider": "4.4.2",
+    "@react-native-picker/picker": "2.4.8",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@shopify/flash-list": "1.4.0",
+    "expo": "^48.0.18",
+    "expo-auth-session": "~4.0.3",
+    "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
+    "expo-google-places-autocomplete": "^1.0.0",
+    "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-secure-store": "~12.1.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
+    "firebase": "^9.21.0",
+    "nanoid": "^5.0.3",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "~0.71.14",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-paper": "^5.11.2",
+    "react-native-range-slider-expo": "^1.4.3",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-redux": "^8.1.2",
+    "twrnc": "^3.6.4",
+    "@react-native-community/datetimepicker": "6.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
