--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.19.16",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "^6.6.6",
@@ -34,7 +35,7 @@
     "react-dom": "18.2.0",
     "react-native": "~0.71.14",
     "react-native-dotenv": "^3.4.9",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-loading-spinner-overlay": "^3.0.1",
@@ -46,11 +47,11 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.2",
-    "twrnc": "^3.6.4",
-    "@react-native-community/datetimepicker": "6.7.3"
+    "twrnc": "^3.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
