--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.2",
     "twrnc": "^3.6.4",
-    "@react-native-community/datetimepicker": "6.7.3"
+    "@react-native-community/datetimepicker": "6.7.3",
+    "expo-device": "~5.2.1",
+    "expo-notifications": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
